# python-DSL

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  python-dsl.cabal  stack.yaml
app/: Main.hs
examples/: arith.py  big_print.py  builtin.py  fact.py  factorial.py
src/: PInterpreter.hs  Py.hs  PyInterpreter.hs  PyParser.hs  PyPrinter.hs  PyValue.hs  Python.hs  Value.hs
test/: ParserSpec.hs
