name:                python-dsl
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/fp-homework/tree/master/hw0#readme
license:             MIT
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.8.3

library
  hs-source-dirs:      src
  exposed-modules:     Py
                     , PyInterpreter
                     , PyParser
                     , PyPrinter
                     , PyValue
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , containers
                     , exceptions
                     , free
                     , megaparsec
                     , parser-combinators
                     , transformers
  default-language:    Haskell2010

executable python-dsl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , python-dsl
  default-language:    Haskell2010

test-suite python-dsl-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , hspec
                     , megaparsec
                     , python-dsl
  default-language:    Haskell2010